adding test coverage
